# ai-nuke-newsfeed

./: .coverage  .gitignore  README.md  coverage.xml  nuclear_news_indexer.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
.scannerwork/: report-task.txt
.scannerwork/ir/python/: collected.metadata  collected.typedefs
.scannerwork/ucfg2/python/: all.typedefs  ucfg_nuclear_news_indexer_DictReadMapping.ucfg  ucfg_nuclear_news_indexer_Reader___init___1.ucfg  ucfg_nuclear_news_indexer_Reader___init___2.ucfg  ucfg_nuclear_news_indexer_Workbook_remove.ucfg  ucfg_nuclear_news_indexer_Writer___init___1.ucfg  ucfg_nuclear_news_indexer__csv_DictReader.ucfg  ucfg_nuclear_news_indexer__range_to_tuple.ucfg  ucfg_nuclear_news_indexer_add_named_style.ucfg  ucfg_nuclear_news_indexer_ange_boundaries.ucfg  ucfg_nuclear_news_indexer_atches_keywords.ucfg  ucfg_nuclear_news_indexer_ate_from_string.ucfg  ucfg_nuclear_news_indexer_book_move_sheet.ucfg  ucfg_nuclear_news_indexer_cel_ExcelReader.ucfg  ucfg_nuclear_news_indexer_class_getitem___14.ucfg  ucfg_nuclear_news_indexer_class_getitem___15.ucfg  ucfg_nuclear_news_indexer_class_getitem___4.ucfg  ucfg_nuclear_news_indexer_cols_from_range.ucfg  ucfg_nuclear_news_indexer_column_interval.ucfg  ucfg_nuclear_news_indexer_ct___reversed__.ucfg  ucfg_nuclear_news_indexer_dex_from_string.ucfg  ucfg_nuclear_news_indexer_dict___init__.ucfg  ucfg_nuclear_news_indexer_dict___len__.ucfg  (+28 more)
.sonar/: report-task.txt
.sonar/ir/python/: ir_000000041.ir  (+10 more)
tests/: test_nuclear_news_indexer.py
(+28 files in other folders)
